<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/black"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:background="@color/black"
                android:gravity="fill_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="aviClicked"
                    app:cardCornerRadius="25dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:contentDescription="@string/notificationIcon"
                        android:scaleType="centerCrop"
                        android:src="@drawable/avi" />
                </androidx.cardview.widget.CardView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@null"
                    android:contentDescription="@null"/>

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/twitterIcon"
                    android:scaleType="fitCenter"
                    android:src="@drawable/twitter" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@null"
                    android:contentDescription="@null"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="@string/notificationIcon"
                    android:src="@drawable/outline_grade_24"
                    app:tint="@color/lightGrey" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/divider" />

            <ListView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black"
                android:orientation="vertical">

            </ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:background="@color/black"
                android:gravity="fill_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/homeIcon"
                    android:src="@drawable/outline_home_24"
                    app:tint="@color/lightGrey" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/searchIcon"
                    android:src="@drawable/outline_search_24"
                    app:tint="@color/lightGrey" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/notificationIcon"
                    android:src="@drawable/outline_notifications_24"
                    app:tint="@color/lightGrey" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/messageIcon"
                    android:src="@drawable/outline_email_24"
                    app:tint="@color/lightGrey" />
            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="340dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/black" />
</androidx.drawerlayout.widget.DrawerLayout>